manifests/code-server/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  selector:
    app: code-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
