manifests/code-server/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  labels:
    gateway: private
    app: code-server
spec:
  hostnames:
    - code.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: code-server
          port: 8080
